[gd_scene load_steps=8 format=2]

[ext_resource path="res://levels/cloud/cloud4script.gd" type="Script" id=1]
[ext_resource path="res://levels/cloud/cloudbackground.jpg" type="Texture" id=2]
[ext_resource path="res://levels/template/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels/template/DeathFloor.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/template/Platform.tscn" type="PackedScene" id=5]
[ext_resource path="res://levels/template/FinishObject.tscn" type="PackedScene" id=6]
[ext_resource path="res://levels/template/ColorChanger.tscn" type="PackedScene" id=7]

[node name="WorldNode2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.835294, 0.835294, 0.835294, 1 )
position = Vector2( 531.269, -279.615 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 530, -580 )

[node name="DeathFloor" parent="." instance=ExtResource( 4 )]
scale = Vector2( 30, 1 )

[node name="LeftWall" parent="." instance=ExtResource( 5 )]
position = Vector2( -460, -90 )
scale = Vector2( 0.76, 21.9 )

[node name="RightWall" parent="." instance=ExtResource( 5 )]
position = Vector2( 1500, -90 )
scale = Vector2( 0.76, 21.9 )

[node name="Ceiling" parent="." instance=ExtResource( 5 )]
position = Vector2( 520, -760 )
rotation = 1.5708
scale = Vector2( 0.76, 30 )

[node name="Platform" parent="." instance=ExtResource( 5 )]
position = Vector2( 530, -490 )
scale = Vector2( 5, 0.6 )

[node name="Platform2" parent="." instance=ExtResource( 5 )]
position = Vector2( 350, -620 )
scale = Vector2( 0.6, 4.5 )

[node name="Platform3" parent="." instance=ExtResource( 5 )]
position = Vector2( 850.8, -230 )
scale = Vector2( 0.6, 0.6 )

[node name="Platform4" parent="." instance=ExtResource( 5 )]
position = Vector2( 270, 20 )
scale = Vector2( 7, 0.6 )

[node name="Platform5" parent="." instance=ExtResource( 5 )]
position = Vector2( 530, -320 )
scale = Vector2( 0.6, 5 )

[node name="FinishObject" parent="." instance=ExtResource( 6 )]
position = Vector2( -260, 230 )

[node name="ColorChanger" parent="." instance=ExtResource( 7 )]
position = Vector2( 670, -240 )
